--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Flask==3.0.0
 Flask-SocketIO==5.3.5
 Flask-CORS==4.0.0
 python-socketio==5.10.0
-eventlet==0.33.3
+simple-websocket==1.0.0
 requests==2.31.0
 
 # For testing and development
