--- a/devices/config_node4.json
+++ b/devices/config_node4.json
@@ -3,6 +3,7 @@
   "node_name": "NexLattice Node 4",
   "wifi_ssid": "YourNetworkSSID",
   "wifi_password": "YourNetworkPassword",
+  "pre_shared_key": "NexLatticeSharedSecretKey256",
   "discovery_port": 5000,
   "message_port": 5001,
   "dashboard_ip": "192.168.1.100",
